# open-mast

./: .gitignore  .gitmodules  CMakeLists.txt
include/: cfitsio
include/fits/: FitsFile.hpp
src/: CMakeLists.txt
src/fits/: CMakeLists.txt  FitsFile.cpp
src/fitsjs/: CMakeLists.txt  FitsFile.cpp
